--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -20,7 +20,7 @@ on:
           - vpc
           - ecr
           - ecs-metabase
-          - nextjs-alb
+          - alb-metabase
       tf_function:
         type: choice
         description: "infrastructure planning / deployment"
