--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -46,7 +46,7 @@ jobs:
               echo "resource_env=unknown" >> $GITHUB_ENV
               ;;
           esac
-          
+
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -80,3 +80,4 @@ jobs:
           tf_version: ${{ env.TERRAFORM_VERSION }}
           tg_version: ${{ env.TERRAGRUNT_VERSION }}
           tg_dir: ${{ env.tg_dir }} # terragrunt/${{ env.resource_env }}_terragrunt/${{ env.resource_env }}/${{ inputs.environment_name }}/${{ inputs.resource }}
+          tg_command: 'destroy'
